# Serial

./: CMakeLists.txt  cardwindow.cpp  cardwindow.h  cardwindow.ui  home.cpp  home.ui  learningmodewindow.cpp  learningmodewindow.h  learningmodewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  mydatabase.db  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui
